--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,10 @@
+ul {
+  list-style: none;
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .App {
   text-align: center;
 }
@@ -5,18 +12,27 @@
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
+  user-select: none;
   pointer-events: none;
 }
 
-.App-header {
+.App-content {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: calc(100vh - 51px);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.App-container {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .App-link {
