--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -16,6 +16,19 @@ a {
   cursor: pointer;
 }
 
+ul {
+  list-style: none;
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 button:focus {
   outline: none
+}
+
+.container {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
