--- a/src/assets/styles/index.src.css
+++ b/src/assets/styles/index.src.css
@@ -1,8 +1,3 @@
-/* @tailwind base;
-
-@tailwind components;
-
-@tailwind utilities; */
 @import "tailwindcss/base";
 
 @import "tailwindcss/components";
@@ -11,4 +6,16 @@
 
 *:focus {
   outline: 0;
+}
+
+[class*="hover"] {
+  transition: all 0.3s;
+}
+
+.btn {
+  @apply text-sm border border-white px-3 py-2 rounded;
+  transition: background 0.3s, color 0.3s;
+  &:focus {
+    @apply bg-white text-primary;
+  }
 }
